--- a/parcial/MVCparcial/MVCparcial.csproj
+++ b/parcial/MVCparcial/MVCparcial.csproj
@@ -176,12 +176,15 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\PepitaCarrilloFriendsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\DataContext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\PepitaCarrilloFriend.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -241,6 +244,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\PepitaCarrilloFriends\Create.cshtml" />
+    <Content Include="Views\PepitaCarrilloFriends\Delete.cshtml" />
+    <Content Include="Views\PepitaCarrilloFriends\Details.cshtml" />
+    <Content Include="Views\PepitaCarrilloFriends\Edit.cshtml" />
+    <Content Include="Views\PepitaCarrilloFriends\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
